--- a/index.htm
+++ b/index.htm
@@ -1,10 +1,11 @@
-﻿<html> 
+<html> 
 <head>
 <title>titolo della pagina</title>
 </head>
 <body>
 <h1>benvenuti nella mia pagina web</h1>
 <p>questoèunparagrafoditesto</p>
+<a href="https://www.google.com">fai una ricerca clicca qui</a>
 </body>
 </html>
 <!–piè di pagina—-> non visibile a chi lo legge
