--- a/index.htm
+++ b/index.htm
@@ -5,11 +5,11 @@
 <body>
 <h1>benvenuti nella mia pagina web</h1>
 <p>questoèunparagrafoditesto</p>
-<a href="https://www.google.com">fai una ricerca clicca qui</a>
+<a href="https://www.google.com" target_blank>fai una ricerca clicca qui</a>
 </body>
 </html>
 <!–piè di pagina—-> non visibile a chi lo legge
 <footer>
 <p>copyright 2023-by-nome sito-tutti-i-diritti riservati </p>
-…</footer>
+ </footer>
 </html>
