--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 <body>
 <h1>benvenuti nella mia pagina web</h1>
 <p>questoèunparagrafoditesto</p>
-<a href="https://www.google.com" target_blank>fai una ricerca clicca qui</a>
+<a href="https://www.google.com" target="_blank">fai una ricerca clicca qui</a>
 </body>
 </html>
 <!–piè di pagina—-> non visibile a chi lo legge
