--- a/pagina2.html
+++ b/pagina2.html
@@ -58,6 +58,7 @@ creazione degli elementi multimediali
 statico= es un pdf che non può essere visualizzato diversamente / sito web responsive si adatta, cambia la visualizzazione, la disposizione
 si fanno 2 layout uno per desktop e uno per mobile
 </p>
+<a href="index.html">ritorna all'home page</a>
 </body>
 </html>
 <!–piè di pagina—-> non visibile a chi lo legge
