--- a/index.htm
+++ b/index.htm
@@ -74,7 +74,7 @@ dal 28 al 31 luglio Festa Te La Uliata a cura di ActionAid Lecce a Caprarica di 
 </p>
 <!   link per navigare direttamente alla sezione  >
 <a href="#sezione">vai alla sezione</a> 
->a href="pagina2.html">vai alla seconda pagina del mio sito</a>
+<a href="pagina2.html">vai alla seconda pagina del mio sito</a>
 </body>
 </html>
 <!–piè di pagina—-> non visibile a chi lo legge
