--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,7 @@
 <h1>benvenuti nella mia pagina web</h1>
 <p>questoèunparagrafoditesto</p>
 <a href="https://www.google.com" target="_blank">fai una ricerca clicca qui</a>
+ <a href=”mailto:info@esempio.com”>invia una email</a>
 <!  punto di destinazione della stessa pagina   >
 <div id="sezione">
  qui è la sezione a cui vuoi arrivare.
